[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Region/Automaton_inactive.png" type="Texture" id=1]
[ext_resource path="res://_common/GUI/HealthBarUnder.png" type="Texture" id=2]
[ext_resource path="res://_common/GUI/HealthBarOver.png" type="Texture" id=3]
[ext_resource path="res://_common/GUI/HealthBarFill.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Battle/FriendlyHouses.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Region/Automaton_destroyed.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=13]
light_mode = 1

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.0
height = 90.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fire:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Fire:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.365922, 0.519553, 0.807263, 0.988827 )
colors = PoolColorArray( 0.959033, 0.732193, 0.0932675, 1, 0.619189, 0, 0, 1, 0, 0, 0, 1, 0.473828, 0.469821, 0.469821, 1 )

[sub_resource type="CanvasItemMaterial" id=14]
light_mode = 1

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 44, 31 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 44, 0, 44, 31 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 88, 0, 44, 31 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 132, 0, 44, 31 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 176, 0, 44, 31 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 220, 0, 44, 31 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 110.5, 99 )

[node name="SpareGolem" type="StaticBody2D" groups=["obstacles", "village"]]
collision_layer = 32
collision_mask = 258
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 13 )
position = Vector2( 0, -10 )
scale = Vector2( 3, 3 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -52.0
margin_top = -65.0
margin_right = 61.0
margin_bottom = -25.0
mouse_filter = 2
max_value = 1.0
step = 0.05
value = 1.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 2 )

[node name="Fire" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 2.0
lifetime_randomness = 0.5
emission_shape = 2
emission_rect_extents = Vector2( 50, 5 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, -1 )
initial_velocity = 25.0
angle = 45.0
scale_amount = 10.0
scale_amount_random = 0.25
color = Color( 0.917647, 0.0823529, 0.0823529, 1 )
color_ramp = SubResource( 4 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Corpse" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 14 )
position = Vector2( 0, -1 )
scale = Vector2( 3, 3 )
frames = SubResource( 12 )
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -14 )
shape = SubResource( 5 )

[node name="PathfindingObstacle" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PathfindingObstacle"]
polygon = PoolVector2Array( 48, -48, -48, -48, -48, 32, 48, 32 )

[node name="InvulnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="possessed_by_player" from="." to="." method="_on_SpareGolem_possessed_by_player"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_InvulnTimer_timeout"]
